Dev/src/LeanData/objects/ABM_Reassign_Rule__c.object
<CustomObject>
    <fields>
        <fullName>Criterias__c</fullName>
        <label>Criterias</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_Filter_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Filter Rule?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reassign_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassign to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ABM_Reassign_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rule_Logic__c</fullName>
        <label>Rule Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scenario_Number__c</fullName>
        <label>Scenario Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Sort_Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ABM Reassign Rule</label>
    <nameField>
        <label>ABM Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ABM Reassign Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>